[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/chocolat√£o.png" type="Texture" id=1]
[ext_resource path="res://scenes/scripts/itens/Chocolate.gd" type="Script" id=2]
[ext_resource path="res://sounds/item ruim (1).ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.5, 38.5 )

[node name="Chocolate" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ -59.0 ]
}

[node name="ChocolateSprite" type="Sprite" parent="."]
position = Vector2( 8, 64 )
scale = Vector2( 0.4, 0.41227 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32.5, 73.5 )
shape = SubResource( 1 )

[node name="CollectedSoundBad" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 15.0

[connection signal="body_entered" from="." to="." method="_on_Chocolat_body_entered"]
